@@ -15,6 +15,7 @@ o add Config.iboxEnable for security reason.
 o add Tag::getDatasetAttrsRaw to get attributes with "data-" prefixes.
 o support z-index
 o support position:absolute
+o enabled vert-glyph for safari(ver >= 5)
 
 version 4.0.10, 2013/12/04
 =========================
